--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -34,7 +34,7 @@ jobs:
         set -eux
         pwd
         cd linux-kernel
-        wget https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.1.24.tar.xz
+        wget -q https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.1.24.tar.xz
         tar xf linux-6.1.24.tar.xz
         ln -s linux-6.1.24 linux
         ./build-kernel.sh
